// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for active: false, direction: asc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  transform: translate3d(0,0,0);
  display: flex;
  gap: 4px;
  width: auto;
  margin: 0;
  padding: 0;
  color: inherit;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-end;
  font-size: 1rem;
  appearance: none;
  background: transparent;
  text-align: left;
  border: 0;
  cursor: pointer;
}
button::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
}
@media(hover:hover) {
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
  button:hover .icon, button:focus .icon {
    opacity: 1;
  }
}

.icon {
  margin-left: 4px;
  transition: opacity var(--p-transition-duration, .24s) ease;
  opacity: 0;
  transform: rotate3d(0,0,1,0deg);
  transform-origin: 50% 50%;
  filter: var(--p-internal-table-head-cell-icon-filter);
}"
`;

exports[`getComponentCss() should return correct css for active: false, direction: desc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  transform: translate3d(0,0,0);
  display: flex;
  gap: 4px;
  width: auto;
  margin: 0;
  padding: 0;
  color: inherit;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-end;
  font-size: 1rem;
  appearance: none;
  background: transparent;
  text-align: left;
  border: 0;
  cursor: pointer;
}
button::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
}
@media(hover:hover) {
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
  button:hover .icon, button:focus .icon {
    opacity: 1;
  }
}

.icon {
  margin-left: 4px;
  transition: opacity var(--p-transition-duration, .24s) ease;
  opacity: 0;
  transform: rotate3d(0,0,1,180deg);
  transform-origin: 50% 50%;
  filter: var(--p-internal-table-head-cell-icon-filter);
}"
`;

exports[`getComponentCss() should return correct css for active: true, direction: asc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  transform: translate3d(0,0,0);
  display: flex;
  gap: 4px;
  width: auto;
  margin: 0;
  padding: 0;
  color: inherit;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-end;
  font-size: 1rem;
  appearance: none;
  background: transparent;
  text-align: left;
  border: 0;
  cursor: pointer;
}
button::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
}
@media(hover:hover) {
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
  button:hover .icon, button:focus .icon {
    opacity: 1;
  }
}

.icon {
  margin-left: 4px;
  transition: opacity var(--p-transition-duration, .24s) ease;
  opacity: 1;
  transform: rotate3d(0,0,1,0deg);
  transform-origin: 50% 50%;
  filter: var(--p-internal-table-head-cell-icon-filter);
}"
`;

exports[`getComponentCss() should return correct css for active: true, direction: desc, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  transform: translate3d(0,0,0);
  display: flex;
  gap: 4px;
  width: auto;
  margin: 0;
  padding: 0;
  color: inherit;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-end;
  font-size: 1rem;
  appearance: none;
  background: transparent;
  text-align: left;
  border: 0;
  cursor: pointer;
}
button::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
}
@media(hover:hover) {
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
  button:hover .icon, button:focus .icon {
    opacity: 1;
  }
}

.icon {
  margin-left: 4px;
  transition: opacity var(--p-transition-duration, .24s) ease;
  opacity: 1;
  transform: rotate3d(0,0,1,180deg);
  transform-origin: 50% 50%;
  filter: var(--p-internal-table-head-cell-icon-filter);
}"
`;

exports[`getComponentCss() should return correct css for active: true, direction: desc, hideLabel: false and multiline: true 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: normal !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  transform: translate3d(0,0,0);
  display: flex;
  gap: 4px;
  width: auto;
  margin: 0;
  padding: 0;
  color: inherit;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-end;
  font-size: 1rem;
  appearance: none;
  background: transparent;
  text-align: left;
  border: 0;
  cursor: pointer;
}
button::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, .24s) ease;
}
button:focus::before {
  border: 2px solid #1A44EA;
}
button:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
}
@media(hover:hover) {
  button:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
  button:hover .icon, button:focus .icon {
    opacity: 1;
  }
}

.icon {
  margin-left: 4px;
  transition: opacity var(--p-transition-duration, .24s) ease;
  opacity: 1;
  transform: rotate3d(0,0,1,180deg);
  transform-origin: 50% 50%;
  filter: var(--p-internal-table-head-cell-icon-filter);
}"
`;

exports[`getComponentCss() should return correct css for active: undefined, direction: undefined, hideLabel: false and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for active: undefined, direction: undefined, hideLabel: true and multiline: false 1`] = `
":host {
  display: table-cell !important;
  padding: 2px clamp(8px, 0.5vw + 6px, 16px) clamp(8px, 0.5vw + 6px, 16px) !important;
  vertical-align: bottom !important;
  font-weight: 600 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}
span {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  display: block;
}"
`;
